solutions/gke/kubernetes/namespace-defaults/namespace.yaml
# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#########
# Workload namespace
apiVersion: v1
kind: Namespace
metadata:
  name: workload-name # kpt-set: ${workload-name}
  labels:
    shared-gateway-access: "true" # Needed for shared Gateway
# TODO: to be replaced by gatekeeper constraints
# pod-security.kubernetes.io/warn: restricted
